style(layout): remove outer .base-layout border to avoid visible frame when zoomed

--- a/src/assets/css/container.scss
+++ b/src/assets/css/container.scss
@@ -4,7 +4,8 @@
 }
 
 .base-layout {
-  border: 1px solid var(--custom-border-color);
+  /* Remove overall border to avoid an outer frame when zoomed */
+  border: 0;
 
   .el-aside {
     background-color: var(--custom-background-color);
